Fixed the overflow bug

--- a/src/main.scss
+++ b/src/main.scss
@@ -29,6 +29,7 @@ ul {
     justify-content: space-between;
     align-items: center;
     flex-direction: column;
+    overflow: hidden;
 }
 
 .hiden {
